# OpenMusicServer

./: Cargo.toml  README.md  justfile  rustfmt.toml
.cargo/: config.toml
api/: Cargo.toml
api/src/: lib.rs
audio/: .ignore  Cargo.toml
audio/src/: lib.rs
audio/tests/assets/audios/: sample1_mono.aac  sample1_short.aac
cli/: Cargo.toml  copyright.txt
cli/src/: cli.rs  main.rs
server/: Cargo.toml
server/src/: config.rs  lib.rs  main.rs
types/: Cargo.toml
types/src/: config.rs  lib.rs  tasker.rs
www/: .prettierrc  index.html  package.json  pnpm-lock.yaml  tsconfig.app.json  tsconfig.json  tsconfig.node.json  vite.config.ts
www/src/: App.svelte
