[workspace]
resolver = "3"
members = ["api", "audio", "server", "types"]

[workspace.dependencies]
anyhow = "1.0.98"
axum = "0.8.4"
tokio = { version = "1.47.0", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0.219", features = ["derive"] }
sqlx = { version = "0.8.6", features = [
	"runtime-tokio",
	"sqlite",
	"derive",
	"macros",
] }
