[package]
name = "oms"
version = "0.1.0"
edition = "2024"

[dependencies]
oms_types = { path = "../types" }
oms_server = { path = "../server" }
oms_api = { path = "../api" }
anyhow = { workspace = true }
clap = { version = "4.5.45", features = ["derive"] }
config = { version = "0.15.14", features = [
	"convert-case",
	"ini",
], default-features = false }
