[package]
name = "oms_server"
version = "0.1.0"
edition = "2024"

[dependencies]
oms_types = { path = "../types" }
oms_api = { path = "../api" }
axum = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
anyhow = { workspace = true }
sqlx = { workspace = true }
tower-http = { version = "0.6.6", features = [
	"compression-full",
	"cors",
	"decompression-full",
	"fs",
] }
tower = "0.5.2"
